# e-commerce

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  alembic_utils.py  app.py  asgi.py  auth.py  bootstrap.py  config.py  db.py  ecommerce.db  models.py  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  tox.ini  utils.py
.github/workflows/: pages.yml
alembic/: env.py
alembic/versions/: 0278215fd252_initial_schema.py  1506c11aa7a0_initial_migration.py  6f35d642fb4d_testing.py  6fe1a48eff33_initial_migration.py  c4e282976b91_initial_schema.py  e0d0c5b23b3b_testing.py
api/: login.py  orders.py  products.py  routes.py  users.py
application/use_cases/: __init__.py  auth.py  orders.py  products.py  users.py
domain/: entities.py  repositories.py
infrastructure/: db.py
infrastructure/jsonjwt/: __init__.py
infrastructure/sqlalchemy/: repositories.py
interfaces/http/: jwt_middleware.py  lifespan.py  login_resource.py  order_resource.py  product_resource.py  user_resource.py
middleware/: jwt_auth.py  lifespan.py  request_logger.py
migrations/: env.py
migrations/versions/: ede07bcaa5b1_initial_migration.py
resources/: login.py  orders.py  products.py  users.py
schemas/: login_schemas.py  order_schemas.py
scripts/: rollback_test.py  seed_test_user.py
shared/: utils.py
src/: manage.py
src/api/middleware/: error_handler.py  jwt.py  lifespan.py  request_logger.py  role.py
src/api/routes/: login_resource.py  order_resource.py  order_resources.py  product_resource.py  product_resources.py  user_resource.py  user_resources.py
src/api/schemas/: login_schemas.py  order_schemas.py  product_schemas.py  user_schemas.py
src/app/: app.py  create_app.py  logging_conf.py  settings.py  spectree.py
src/common/: logging.py  utils.py
src/domain/auth/: auth.py
src/domain/orders/: entities.py  repositories.py
src/domain/products/: entities.py  repositories.py
src/domain/users/: entities.py  repositories.py
src/infrastructure/databases/: db.py  unit_of_work.py
src/infrastructure/jwt/: service.py
src/infrastructure/sqlalchemy/: events.py  models.py  repositories.py
src/services/use_cases/: __init__.py  access_control.py  auth.py  orders.py  products.py  users.py
static/: auth.js  index.html  index.js
tests/: conftest.py  test_apispec.py  test_auth.py  test_boundaries.py  test_error_handler.py  test_orders.py  test_products.py  test_products_pagination.py  test_rbac.py  test_sa_events.py  test_schemas.py  test_unit_of_work.py  test_users.py  test_users_pagination.py
tests/helpers/: boundaries.py
