[project]
    dependencies = [
        "aiosqlite",
        "alembic",
        "bcrypt>=4.3.0",
        "falcon",
        "fastopenapi[falcon]>=0.6.0",
        "joserfc>=1.0.4",
        "loguru>=0.7.3",
        "openapi-core>=0.19.5",
        "openapi-pydantic>=0.5.1",
        "pydantic-settings>=2.8.1",
        "pydantic[email]>=2.11.3",
        "spectree>=1.4.6",
        "sqlalchemy",
        "swagger-ui-bundle>=1.1.0",
        "uvicorn[standard]",
]
    description = "A lightweight, asynchronous RESTful e-commerce backend API."
    name = "e-commerce"
    readme = "README.md"
    requires-python = ">=3.12.9"
    version = "1.0.0"

[dependency-groups]
    dev = [
    "asgi-lifespan>=2.1.0",
    "basedpyright",
    "httpie>=3.2.4",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff",
]

[tool.uv.sources]
openapi-core = { git = "https://github.com/python-openapi/openapi-core" }
falcon = { git = "https://github.com/falconry/falcon" }
